# mc

./: .gitignore  CMakeLists.txt  README.md  notes.txt
inc/: Blocks.h  Camera.h  Chunk.h  Cube.h  Game.h  Player.h  Quad.h  Shader.h  Window.h  World.h
inc/old/: Chunk.h.OLD  World.h.OLD
res/shaders/: backpack.frag  chunk.frag  chunk.vert  container.frag  container.vert  cube.frag  cube.vert  fragment.frag
src/: Camera.cpp  Chunk.cpp  Cube.cpp  Game.cpp  Player.cpp  Shader.cpp  Window.cpp  World.cpp  main.cpp
src/old/: Chunk.cpp.OLD  World.cpp.OLD
